<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.weathercourse.main.Fragments.GeoPosition_Fragment"
        android:background="@drawable/back_find_out_ciry"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/yourTownTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2.5"
            android:scaleY="2.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourTownTv"
            app:layout_constraintVertical_bias="0.19" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yourCityEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cyrcle_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/your_city_in_english"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#7AFFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.13" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editYourCiryBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2CFFFFFF"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:text="@string/save"
            android:visibility="gone"
            android:textColor="@color/white"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourCityEdit"
            app:layout_constraintVertical_bias="0.110000014"
            app:strokeColor="@color/white" />

        <ImageView
            android:id="@+id/imageLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:repeatCount="infinite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014"
            app:srcCompat="@drawable/disk"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewEditCityByHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_you_can_enter_your_city"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>